src/snapshots/green_tea__renderer__test__render_import.snap
---
source: src/renderer.rs
expression: "{> import user.{User}\n{> with name as String\n{{ name }}"
---
// DO NOT EDIT: Code generated by green-tea from -test-

import gleam/string_builder.{StringBuilder}
import gleam/list

import user.{User}

pub fn render_builder(name name: String) -> StringBuilder {
    let builder = string_builder.from_string("")
    let builder = string_builder.append(builder, name)

    builder
}

pub fn render(name name: String) -> String {
    string_builder.to_string(render_builder(name: name))
}

