src/snapshots/green_tea__renderer__test__render_pure_text.snap
---
source: src/renderer.rs
expression: "Hello name, good to meet you"
---
// DO NOT EDIT: Code generated by green-tea from -test-

import gleam/string_builder.{StringBuilder}
import gleam/list



pub fn render_builder() -> StringBuilder {
    let builder = string_builder.from_string("")
    let builder = string_builder.append(builder, "Hello name, good to meet you")

    builder
}

pub fn render() -> String {
    string_builder.to_string(render_builder())
}

