src/snapshots/green_tea__renderer__test__render_two_identifiers.snap
---
source: src/renderer.rs
expression: "{> with name as String\n{> with adjective as String\nHello {{ name }}, {{ adjective }} to meet you"
---
// DO NOT EDIT: Code generated by green-tea from -test-

import gleam/string_builder.{StringBuilder}
import gleam/list



pub fn render_builder(name name: String, adjective adjective: String) -> StringBuilder {
    let builder = string_builder.from_string("")
    let builder = string_builder.append(builder, "Hello ")
    let builder = string_builder.append(builder, name)
    let builder = string_builder.append(builder, ", ")
    let builder = string_builder.append(builder, adjective)
    let builder = string_builder.append(builder, " to meet you")

    builder
}

pub fn render(name name: String, adjective adjective: String) -> String {
    string_builder.to_string(render_builder(name: name, adjective: adjective))
}

