src/snapshots/green_tea__renderer__test__render_with.snap
---
source: src/renderer.rs
expression: "{> with user as User\n{{ user }}"
---
// DO NOT EDIT: Code generated by green-tea from -test-

import gleam/string_builder.{StringBuilder}
import gleam/list



pub fn render_builder(user user: User) -> StringBuilder {
    let builder = string_builder.from_string("")
    let builder = string_builder.append(builder, user)

    builder
}

pub fn render(user user: User) -> String {
    string_builder.to_string(render_builder(user: user))
}

